--- a/app/src/main/res/xml/fragment_chat_scene.xml
+++ b/app/src/main/res/xml/fragment_chat_scene.xml
@@ -13,10 +13,10 @@
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
-            android:layout_height="38dp"
-            motion:layout_constraintStart_toStartOf="@+id/personImage"
-            motion:layout_constraintEnd_toEndOf="@+id/personImage"
-            android:layout_width="105dp"
+            android:layout_height="wrap_content"
+            motion:layout_constraintStart_toStartOf="@id/personImage"
+            motion:layout_constraintEnd_toEndOf="@id/personImage"
+            android:layout_width="wrap_content"
             motion:layout_constraintTop_toBottomOf="@+id/personImage"
             android:id="@+id/personName" />
         <Constraint
@@ -38,7 +38,7 @@
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            motion:layout_constraintBottom_toTopOf="@+id/messageText"
+            motion:layout_constraintBottom_toTopOf="@+id/messageTextLayout"
             motion:layout_constraintTop_toBottomOf="@+id/linearLayout2"
             motion:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
@@ -57,7 +57,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             motion:layout_constraintBottom_toBottomOf="@id/personImage"
-            motion:transitionEasing="cubic(0.83,0.46,0.8,0.8)" />
+            motion:transitionEasing="cubic(0.83,0.46,0.8,0.8)"
+            motion:layout_constraintTop_toTopOf="@id/personImage"
+            motion:layout_constraintStart_toEndOf="@id/personImage"
+            android:layout_marginStart="10dp" />
         <Constraint
             android:id="@+id/linearLayout2"
             motion:layout_constraintEnd_toEndOf="parent"
@@ -71,9 +74,24 @@
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            motion:layout_constraintBottom_toTopOf="@+id/messageText"
+            motion:layout_constraintBottom_toTopOf="@+id/messageTextLayout"
             motion:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-            motion:layout_constraintStart_toStartOf="parent" />
+            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="10dp" />
+        <Constraint
+            android:id="@+id/backBtn"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp" />
+        <Constraint
+            android:id="@+id/send"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            motion:layout_constraintBottom_toBottomOf="parent" />
+
     </ConstraintSet>
 
 
