--- a/app/src/main/res/xml/fragment_chat_scene.xml
+++ b/app/src/main/res/xml/fragment_chat_scene.xml
@@ -72,7 +72,7 @@
         <Constraint
             android:id="@+id/recyclerView"
             motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             motion:layout_constraintBottom_toTopOf="@+id/messageTextLayout"
             motion:layout_constraintTop_toBottomOf="@+id/linearLayout2"
@@ -88,8 +88,8 @@
         <Constraint
             android:id="@+id/send"
             motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             motion:layout_constraintBottom_toBottomOf="parent" />
 
     </ConstraintSet>
