--- a/app/src/main/res/drawable/chat_recieve_layout.xml
+++ b/app/src/main/res/drawable/chat_recieve_layout.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="#F1E0E0" />
-    <corners android:topRightRadius="@dimen/_80sdp"
-        android:bottomRightRadius="@dimen/_80sdp"
-        android:topLeftRadius="@dimen/_80sdp"
+    <corners android:topRightRadius="20dp"
+        android:bottomRightRadius="20dp"
+        android:topLeftRadius="20dp"
       />
 </shape>
