--- a/app/src/main/res/drawable/chat_sent_layout.xml
+++ b/app/src/main/res/drawable/chat_sent_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:topRightRadius="@dimen/_80sdp"
-        android:bottomLeftRadius="@dimen/_80sdp"
-        android:topLeftRadius="@dimen/_80sdp"
+    <corners android:topRightRadius="20dp"
+        android:bottomLeftRadius="20dp"
+        android:topLeftRadius="20dp"
         />
     <gradient
         android:angle="135"
