--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_medium"
-        android:text="Ketan Singh"
+        tools:text="Ketan Singh"
         android:textColor="@color/white"
         android:textSize="@dimen/_14sdp"
         app:layout_constraintEnd_toEndOf="@+id/personImage"
@@ -106,7 +106,7 @@
         android:id="@+id/recyclerView"
 
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/messageTextLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,7 +118,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/background_curve"
-        android:minHeight="50dp"
+        android:minHeight="45dp"
+        android:layout_marginEnd="5dp"
         android:paddingStart="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/send"
@@ -128,8 +129,7 @@
             android:id="@+id/linearLayout3"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginStart="3dp"
+            android:layout_marginTop="3dp"
             android:background="@drawable/background_circular"
             android:backgroundTint="#E8A1FA"
             android:gravity="center"
@@ -171,8 +171,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/send"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:background="@drawable/rounded_background_post"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" >
