--- a/app/src/main/res/layout/fragment_create_post_fragmnet.xml
+++ b/app/src/main/res/layout/fragment_create_post_fragmnet.xml
@@ -72,7 +72,7 @@
             android:lines="10"
             android:scrollHorizontally="false"
             android:scrollbars="vertical"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textColorHint="@color/light_gray"
             android:textSize="16sp" />
 
