--- a/app/src/main/res/layout/layout_side_menu.xml
+++ b/app/src/main/res/layout/layout_side_menu.xml
@@ -47,6 +47,7 @@
 
 
     <LinearLayout
+        android:id="@+id/sideMenuBackground"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#2d1058"
@@ -60,6 +61,7 @@
 
 
         <LinearLayout
+            android:id="@+id/videoCallLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -79,6 +81,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/contactLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -96,6 +99,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/savedPost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -114,6 +118,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/settingLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -132,6 +137,7 @@
 
 
         <LinearLayout
+            android:id="@+id/shareApp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
