--- a/app/src/main/res/layout/fragment_create_post_fragmnet.xml
+++ b/app/src/main/res/layout/fragment_create_post_fragmnet.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.createPost.CreatePostFragment"
+    tools:context=".ui.postPackage.CreatePostFragment"
     android:background="#243B55">
     
     <LinearLayout
